Added particles js
Flying btc icons.

--- a/website/app/index.html
+++ b/website/app/index.html
@@ -11,6 +11,7 @@
     <div id="page">
       <div class="page-container">
         <section class="content">
+          <div id="particles-js"></div>
           <header class="main-header">
             <nav class="main-nav">
               <div class="seven-pay">7<span class="pay">PAY</span></div>
@@ -75,7 +76,7 @@
         <section class="chart">
           <div class="btc-chart"><span>btc chart</span></div>
         </section>
-        <section class="about">
+        <section id="about" class="about">
           <div class="wrap">
             <div class="icon"><img src="img/team-icon.png" alt="team-icon.png"><span>BTCrocket – команда специалистов,</br> которые используют индивидуальный</br> подход к задачам клиента.</span></div>
             <div class="icon"><img src="img/armor-icon.png" alt="armor-icon.png"><span>Каждый наш клиент</br> получает безопасное</br> и эффективное обслуживание. </span></div>
@@ -83,6 +84,7 @@
           </div>
         </section>
         <section class="reserve">
+          <div id="particles-js2"></div>
           <div class="wrap">
             <div class="left">
               <h1>РЕЗЕРВ</h1>
@@ -132,7 +134,9 @@
         </footer>
       </div>
     </div>
-    <script src="scripts/jquery-3.1.0.min.js">   </script>
+    <script src="scripts/particles/particles.min.js">  </script>
+    <script src="scripts/particles/app.js">       </script>
+    <script src="scripts/jquery-3.1.0.min.js"></script>
     <script src="scripts/functions.js"></script>
   </body>
 </html>
