added spinning menu

--- a/website/app/index.html
+++ b/website/app/index.html
@@ -15,8 +15,27 @@
           <header class="main-header">
             <nav class="main-nav">
               <div class="seven-pay">7<span class="pay">PAY</span></div>
-              <div class="nav-list"><a href="#">ГЛАВНАЯ</a><a href="#">ТАРИФЫ</a><a href="#">FAQ</a><a href="#contact">КОНТАКТЫ</a><a href="#">ВХОД</a></div>
+              <div class="nav-list"><a href="#main">ГЛАВНАЯ</a><a href="#rate">ТАРИФЫ</a><a href="#faq">FAQ</a><a href="#contact">КОНТАКТЫ</a><a href="#entrance">ВХОД</a></div>
             </nav>
+            <div class="pop-up-container">
+              <div id="entrance">
+                <h1>ВХОД<img src="img/delete.svg" alt="close" class="close"></h1>
+                <form>
+                  <div class="container">
+                    <div class="email"><span>Email</span>
+                      <input type="email" placeholder="example@mail.com">
+                    </div>
+                    <div class="password"><span>Пароль</span>
+                      <input type="password" placeholder="••••••••">
+                    </div>
+                    <div class="sign-in">
+                      <button type="submit" class="signin-btn">Войти</button>
+                      <button class="reg-btn">Зарегистрироваться</button>
+                    </div>
+                  </div>
+                </form>
+              </div>
+            </div>
           </header>
           <div class="currency-stripe">
             <div class="currency">
