Added news page

--- a/website/app/index.html
+++ b/website/app/index.html
@@ -186,7 +186,7 @@
           </div>
         </section>
         <footer class="sevenpay-footer">
-          <div class="wrap"><a href="#content">Обмен</a><a href="#tarify" class="popup">Тарифы</a><a href="#confidentiality" class="popup">Конфиденциальность</a><a href="#about">О нас</a><a href="#faq" class="popup">FAQ</a><a href="#contact">Контакты</a><a href="#">Новости</a></div>
+          <div class="wrap"><a href="#content">Обмен</a><a href="#tarify" class="popup">Тарифы</a><a href="#confidentiality" class="popup">Конфиденциальность</a><a href="#about">О нас</a><a href="#faq" class="popup">FAQ</a><a href="#contact">Контакты</a><a href="news.html" class="news">Новости</a></div>
         </footer>
       </main>
       <div id="load-spinner">
