--- a/website/app/news.html
+++ b/website/app/news.html
@@ -13,9 +13,8 @@
       <main class="page-container">
         <header class="main-header-fixed">
           <div class="shadow"></div>
-          <nav class="main-nav">
-            <div class="seven-pay">7<span class="pay">PAY</span></div>
-            <div class="nav-list"><a href="index.html">ГЛАВНАЯ</a><a href="#tarify" class="popup">ТАРИФЫ</a><a href="#faq" class="popup">FAQ</a><a href="#contact">КОНТАКТЫ</a><a href="#entrance" class="popup">ВХОД</a></div>
+          <nav class="main-nav"><a href="index.html" class="seven-pay">7<span class="pay">PAY</span></a>
+            <div class="nav-list"><a href="index.html">ГЛАВНАЯ</a><a href="#tarify" class="popup">ТАРИФЫ</a><a href="#faq" class="popup">FAQ</a><a href="#entrance" class="popup">ВХОД</a></div>
           </nav>
           <div class="pop-up-container">
             <div id="entrance">
@@ -73,9 +72,8 @@
           </div>
         </header>
         <header class="main-header">
-          <nav class="main-nav">
-            <div class="seven-pay">7<span class="pay">PAY</span></div>
-            <div class="nav-list"><a href="index.html">ГЛАВНАЯ</a><a href="#tarify" class="popup">ТАРИФЫ</a><a href="#faq" class="popup">FAQ</a><a href="#contact">КОНТАКТЫ</a><a href="#entrance" class="popup">ВХОД</a></div>
+          <nav class="main-nav"><a href="index.html" class="seven-pay">7<span class="pay">PAY</span></a>
+            <div class="nav-list"><a href="index.html">ГЛАВНАЯ</a><a href="#tarify" class="popup">ТАРИФЫ</a><a href="#faq" class="popup">FAQ</a><a href="#entrance" class="popup">ВХОД</a></div>
           </nav>
         </header>
         <section class="content-news">     
@@ -117,6 +115,9 @@
           </footer>
         </section>
       </main>
+      <div id="load-spinner">
+        <div class="loader">    </div>
+      </div>
     </div>
     <script src="scripts/jquery-3.1.0.min.js"></script>
     <script src="scripts/functions.js"></script>
